--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>ZAYN STUDIO</title>
     <style>
-        body {
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+        html, body {
             margin: 0;
-            background: #FAFAF4;
+            padding: 0;
+            height: 100%;
+            font-family: 'Montserrat', PingFang SC, Microsoft YaHei, Arial, sans-serif;
         }
+
     </style>
 </head>
 <body>
